# SpineSegmentation

./: CMakeLists.txt  README.md  index.html  scripts.py
HHSpineSegmentationModule/: CMakeLists.txt  HHSpineSegmentationModule.py
